--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "filp/whoops": "^2.7",
         "twig/twig": "^3.0",
-        "altorouter/altorouter": "^2.0"
+        "altorouter/altorouter": "^2.0",
+      "ext-pdo": "*"
     }
 }
