--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "filp/whoops": "^2.7",
         "twig/twig": "^3.0",
         "altorouter/altorouter": "^2.0",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+        "phpmailer/phpmailer": "^6.1"
     }
 }
